Barra/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
D:\ProgramasSO\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
D:\ProgramasSO\BlueJ\lib\bluejcore.jar;D:\ProgramasSO\BlueJ\lib\junit-4.11.jar;D:\ProgramasSO\BlueJ\lib\hamcrest-core-1.3.jar;D:\ProgramasSO\BlueJ\lib\lang-stride.jar;D:\ProgramasSO\BlueJ\lib\javafx\lib\javafx.base.jar;D:\ProgramasSO\BlueJ\lib\javafx\lib\javafx.controls.jar;D:\ProgramasSO\BlueJ\lib\javafx\lib\javafx.fxml.jar;D:\ProgramasSO\BlueJ\lib\javafx\lib\javafx.graphics.jar;D:\ProgramasSO\BlueJ\lib\javafx\lib\javafx.media.jar;D:\ProgramasSO\BlueJ\lib\javafx\lib\javafx.properties.jar;D:\ProgramasSO\BlueJ\lib\javafx\lib\javafx.swing.jar;D:\ProgramasSO\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\lucy_\Documents\GitHub\Topicos\Barra
-d
C:\Users\lucy_\Documents\GitHub\Topicos\Barra\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\lucy_\Documents\GitHub\Topicos\Barra\BarraHerramienta.java
<---- end of javadoc command ---->
Loading source file C:\Users\lucy_\Documents\GitHub\Topicos\Barra\BarraHerramienta.java...
C:\Users\lucy_\Documents\GitHub\Topicos\Barra\BarraHerramienta.java:1: error: illegal character: '\ufeff'
?import java.awt.Color;
^
C:\Users\lucy_\Documents\GitHub\Topicos\Barra\BarraHerramienta.java:1: error: class, interface, or enum expected
?import java.awt.Color;
        ^
2 errors
